# lovherk

./: .gitignore  HOWTO.md  LICENSE  README.md  config.json  config.json.example  data.py  index.py  lover.py  lovherk.py  politikk_og_nyhende.md  pyproject.toml  requirements.txt  rule_converter.py
.github/workflows/: ci.yml
cogs/: botsettings.py  errors.py  events.py  lover.py  misc.py  rules.py  rules_react.py  slowmode.py  test.py
cogs/utils/: rulemanager.py  settings.py
lovdata/: #298511909236375552.txt  AAAA.txt  Grunnloven.txt  grnlov1.txt  grunnloven.txt  pingtest.txt  pol.txt  pol2.txt  snill.txt
servers/266170317892878337/rules/: test.txt
tests/: test_extract_rules.py  test_rulemanager.py
util/: settings.py
utils/: default.py  permissions.py
