[project]
name = "lovherk"
version = "0.1.0"
description = "Discord bot for managing per-server rules (lovherket)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.3,<3",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
